# Runledger

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_STATUS.md  README.md  SECURITY.md  about.html  action.yml  changelog.html  community.html  docs.html  index.html  integrations.html  pricing.html  privacy.html  pyproject.toml  pytest.ini  reference.html  robots.txt  security.html  site.css  site.js  site.webmanifest  sitemap.xml  summary.md  tasklist.md  terms.html
.github/workflows/: ci.yml  release.yml
automation/: README.md  TASKS.md  __init__.py  app_token.py  approved_targets.example.txt  common.py  config.example.yaml  entrypoints.py  outreach_bot.py  repo_finder.py  repo_integrator.py  verifier.py
automation/drafts/: cryxnet_DeepMCPAgent_pr.md
automation/templates/: INTEGRATION.md  PR_body.md  README_note.md  issue_body.md  runledger.yml  runledger_pull_request.yml  runledger_workflow_dispatch.yml
baselines/: demo.json
demo_repo/: .gitignore  README.md
demo_repo/baselines/: demo.json
demo_repo/regressions/: README.md
docs/: assertions.md  baselines.md  ci.md  contracts.md  quickstart.md  troubleshooting.md
examples/demo_agent_py/: agent.py
src/runledger/: __main__.py  cli.py
tests/artifacts/: test_writers.py
tests/assertions/: test_engine.py  test_tool_contracts.py
tests/baseline/: test_io.py
tests/cassette/: test_match.py
tests/cli/: test_diff_promote.py  test_init.py
tests/config/: test_loader.py
tests/golden/: junit.xml  summary.json  test_artifacts_golden.py
(+55 files in other folders)
